text alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -416,6 +416,7 @@ input:placeholder-shown {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  width: 60%;
 }
 .wordElementTranslation {
   min-height: 19px;
@@ -443,16 +444,18 @@ input:placeholder-shown {
   width: 75%;
   display: flex;
   flex-direction: column;
-  text-align: right;
   font-size: 16px;
-}
-.kanjiElementKana div {
-  display: flex;
-  justify-content: flex-end;
-  flex-wrap: wrap;
+  align-items: flex-end;
 }
 .kanjiElementKana span {
   white-space: nowrap;
+}
+.kanjiElementKana div {
+  width: 100%;
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-align: right;
+  text-overflow: ellipsis;
 }
 .kanjiElementTranslation {
   opacity: 0.5;
